--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -23,9 +23,161 @@
       <input type="submit" value="Go Home" />
     </form>
     <br><br>
-    <a href="../routing/htmlRoutes.js">HTML Routes</a> | <a href="../routing/apiRoutes.js">API Routes</a>
-
+    <div>
+      <input id="name" placeholder="Name (Required)">
+    </div>
+    <br>
+    <div>
+      <input id="photo" placeholder="Photo (Required)"></div>
+    <div>
+      <br>
+      <h3>Question 1</h3>
+      <label for="question 1">
+        <h4>question 1 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <br>
+    <div>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>question 2 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <div>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>question 2 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <div>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>question 2 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <div>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>question 2 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <div>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>question 2 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <div>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>question 2 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <div>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>question 2 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <div>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>question 2 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <div>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>question 2 text</h4>
+      </label>
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+    </div>
+    <hr>
+    <p>
+      <a href="../routing/htmlRoutes.js">HTML Routes</a> | <a href="../routing/apiRoutes.js">API Routes</a>
+      | &copy; zzzbray
+    </p>
   </div>
+
   <script src="../data/friends.js"></script>
   <script src="../routing/apiRoutes.js"></script>
   <script src="../routing/htmlRoutes.js"></script>
