--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Survey</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Links to Bootstrap, jQuery,  -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
   <script src="../data/friends.js"></script>
+  <script src="jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
@@ -19,22 +21,111 @@
       <h2>Answer a few basic questions.</h2>
       <h2>Then find the friend with the greatest compatibility!</h2>
     </div>
-    <form action="../public/home.html">
-      <input type="submit" value="Go Home" />
-    </form>
-    <br><br>
-    <div>
-      <input id="name" placeholder="Name (Required)">
-    </div>
     <br>
-    <div>
-      <input id="photo" placeholder="Photo (Required)"></div>
-    <div>
+
+    <!-- Input -->
+    <div id="input">
+      <h4>About You</h4>
+      <div>
+        <input type="text" id="name" placeholder="Name (Required)" required>
+      </div>
+      <br>
+      <div>
+        <input type="text" id="photo" placeholder="Link to photo image (Required)" required>
+      </div>
+      <br>
+    </div>
+
+    <!-- Survey -->
+    <div id="fullSurvey">
       <br>
       <h3>Question 1</h3>
-      <label for="question 1">
-        <h4>You like watching television and will watch most things suggested to you.</h4>
+      <h4>You like watching television and will watch most things suggested to you.</h4>
       </label>
+      <br>
+      <select id="q1">
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+      <br>
+      <br>
+      <h3>Question 2</h3>
+      <label for="question 2">
+        <h4>You believe that religion has an important place in the world and is important to you.</h4>
+      </label>
+      <br>
+      <select id="q2">
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+      <br>
+      <br>
+      <h3>Question 3</h3>
+      <label for="question 3">
+        <h4>You believe that with hard work and much effort most people can achieve what they want in life.</h4>
+      </label>
+      <br>
+      <select id="q3">
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+      <br>
+      <br>
+      <h3>Question 4</h3>
+      <label for="question 4">
+        <h4>You prefer white tablecloths on date night over laminated menus.</h4>
+      </label>
+      <br>
+      <select id="q4">
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+      <br>
+      <br>
+      <h3>Question 5</h3>
+      <label for="question 5">
+        <h4>You'd rather vacation on a beach than in the mountains.</h4>
+      </label>
+      <br>
+      <select id="q5">
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+      <br>
+      <br>
+      <h3>Question 6</h3>
+      <label for="question 6">
+        <h4>You enjoy reading and try to find time at least a few times a week to read a book.</h4>
+      </label>
+      <br>
+      <select id="q6">
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+      <br>
+      <br>
+      <h3>Question 7</h3>
+      <label for="question 7">
+        <h4>You enjoy traveling and would like to take a major trip at least once a year</h4>
+      </label id="q7">
       <br>
       <select>
         <option value="1">1 Strongly Disagree</option>
@@ -43,175 +134,98 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-
       <br>
-      <div id="fullSurvey">
-        <div>
-          <h3>Question 2</h3>
-          <label for="question 2">
-            <h4>You believe that religion has an important place in the world and is important to you.</h4>
-          </label>
-          <br>
-          <select>
-            <option value="1">1 Strongly Disagree</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 Strongly Agree</option>
-          </select>
-        </div>
-        <br>
-        <div>
-          <h3>Question 3</h3>
-          <label for="question 3">
-            <h4>You believe that with hard work and much effort most people can achieve what they want in life.</h4>
-          </label>
-          <br>
-          <select>
-            <option value="1">1 Strongly Disagree</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 Strongly Agree</option>
-          </select>
-        </div>
-        <br>
-        <div>
-          <h3>Question 4</h3>
-          <label for="question 4">
-            <h4>You prefer white tablecloths on date night over laminated menus.</h4>
-          </label>
-          <br>
-          <select>
-            <option value="1">1 Strongly Disagree</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 Strongly Agree</option>
-          </select>
-        </div>
-        <br>
-        <div>
-          <h3>Question 5</h3>
-          <label for="question 5">
-            <h4>You'd rather vacation on a beach than in the mountains.</h4>
-          </label>
-          <br>
-          <select>
-            <option value="1">1 Strongly Disagree</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 Strongly Agree</option>
-          </select>
-        </div>
-        <br>
-        <div>
-          <h3>You enjoy reading and try to find time at least a few times a week to read a book.</h3>
-          <label for="question 6">
-            <h4>question 6 text</h4>
-          </label>
-          <br>
-          <select>
-            <option value="1">1 Strongly Disagree</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 Strongly Agree</option>
-          </select>
-        </div>
-        <br>
-        <div>
-          <h3>You enjoy traveling and would like to take a major trip at least once a year.</h3>
-          <label for="question 7">
-            <h4>question 7 text</h4>
-          </label>
-          <br>
-          <select>
-            <option value="1">1 Strongly Disagree</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 Strongly Agree</option>
-          </select>
-        </div>
-        <br>
-        <div>
-          <h3>Question 8</h3>
-          <label for="question 8">
-            <h4>question 8 text</h4>
-          </label>
-          <br>
-          <select>
-            <option value="1">1 Strongly Disagree</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 Strongly Agree</option>
-          </select>
-        </div>
-        <br>
-        <div>
-          <h3>Question 9</h3>
-          <label for="question 9">
-            <h4>question 9 text</h4>
-          </label>
-          <br>
-          <select>
-            <option value="1">1 Strongly Disagree</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 Strongly Agree</option>
-          </select>
-        </div>
-        <br>
-        <div>
-          <h3>Question 10</h3>
-          <label for="question 10">
-            <h4>question 10 text</h4>
-          </label>
-          <br>
-          <select>
-            <option value="1">1 Strongly Disagree</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 Strongly Agree</option>
-          </select>
-        </div>
-      </div>
-      <!-- Modal -->
-      <div id="thanksModal modal" tabindex="-1" role="dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Thank you for filling out the survey!"</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <p>Modal Body Text</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Save changes</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-        <p>
-          Thanks a lot for taking our survey
-        </p>
-      </div>
+      <br>
+      <h3>Question 8</h3>
+      <label for="question 8">
+        <h4>You enjoy playing sports</h4>
+      </label id="q8">
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+      <br>
+      <br>
+      <h3>Question 9</h3>
+      <label for="question 9">
+        <h4>You enjoy playing video games.</h4>
+      </label id="q9">
+      <br>
+      <select>
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+      <br>
+      <br>
+      <h3>Question 10</h3>
+      <label for="question 10">
+        <h4>You enjoy going to the movies by yourself</h4>
+      </label>
+      <br>
+      <select id="q10">
+        <option value="1">1 Strongly Disagree</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 Strongly Agree</option>
+      </select>
+      <!-- Submit Button -->
+      <br><br>
       <hr>
-      <p>
-        <a href="../routing/htmlRoutes.js">HTML Routes</a> | <a href="../routing/apiRoutes.js">API Routes</a>
-        | &copy; zzzbray
-      </p>
+      <h4>Click to find your match!</h4><button type="submit" class="btn btn-primary" id="submit">Submit</button>
+      <hr>
     </div>
+  </div>
 
-    <script src="../data/friends.js"></script>
-    <script src="../routing/apiRoutes.js"></script>
-    <script src="../routing/htmlRoutes.js"></script>
+
+
+  <footer class="footer-copyright text-center py-.5">
+    <p>
+      <a href="../routing/htmlRoutes.js">HTML Routes</a> | <a href="../routing/apiRoutes.js">API Routes</a>
+      | &copy; zzzbray
+    </p>
+  </footer>
+
+  <!-- Modal -->
+  <!-- <div id="thanksModal modal" tabindex="-1" role="dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Thank you for filling out the survey!"</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Modal Body Text</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+    <p>
+      Thanks a lot for taking our survey
+    </p>
+  </div> -->
+
+  <hr>
+
+
+  <script src="../data/friends.js"></script>
+  <script src="../routing/apiRoutes.js"></script>
+  <script src="../routing/htmlRoutes.js"></script>
+
+
+  <script>
+    $()
+  </script>
 </body>
 
 </html>
