--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -11,6 +11,7 @@
     crossorigin="anonymous">
   <script src="../data/friends.js"></script>
   <script src="jquery-3.3.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../public/style.css">
 </head>
 
 <body>
@@ -50,8 +51,7 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-      <br>
-      <br>
+      <br><br>
       <h3>Question 2</h3>
       <label for="question 2">
         <h4>You believe that religion has an important place in the world and is important to you.</h4>
@@ -64,8 +64,7 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-      <br>
-      <br>
+      <br><br>
       <h3>Question 3</h3>
       <label for="question 3">
         <h4>You believe that with hard work and much effort most people can achieve what they want in life.</h4>
@@ -78,8 +77,7 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-      <br>
-      <br>
+      <br><br>
       <h3>Question 4</h3>
       <label for="question 4">
         <h4>You prefer white tablecloths on date night over laminated menus.</h4>
@@ -92,8 +90,7 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-      <br>
-      <br>
+      <br><br>
       <h3>Question 5</h3>
       <label for="question 5">
         <h4>You'd rather vacation on a beach than in the mountains.</h4>
@@ -106,8 +103,7 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-      <br>
-      <br>
+      <br><br>
       <h3>Question 6</h3>
       <label for="question 6">
         <h4>You enjoy reading and try to find time at least a few times a week to read a book.</h4>
@@ -120,8 +116,7 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-      <br>
-      <br>
+      <br><br>
       <h3>Question 7</h3>
       <label for="question 7">
         <h4>You enjoy traveling and would like to take a major trip at least once a year</h4>
@@ -134,8 +129,7 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-      <br>
-      <br>
+      <br><br>
       <h3>Question 8</h3>
       <label for="question 8">
         <h4>You enjoy playing sports</h4>
@@ -148,8 +142,7 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-      <br>
-      <br>
+      <br><br>
       <h3>Question 9</h3>
       <label for="question 9">
         <h4>You enjoy playing video games.</h4>
@@ -162,8 +155,7 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
-      <br>
-      <br>
+      <br><br>
       <h3>Question 10</h3>
       <label for="question 10">
         <h4>You enjoy going to the movies by yourself</h4>
@@ -176,20 +168,20 @@
         <option value="4">4</option>
         <option value="5">5 Strongly Agree</option>
       </select>
+
       <!-- Submit Button -->
-      <br><br>
-      <hr>
-      <h4>Click to find your match!</h4><button type="submit" class="btn btn-primary" id="submit">Submit</button>
-      <hr>
+      <div id="submitDiv">
+        <br><hr><h4>Click to find your match!</h4><button type="submit" class="btn btn-primary" id="submit">Submit</button>
+        <hr>
+      </div>
     </div>
   </div>
 
-
-
+  <!-- Footer -->
   <footer class="footer-copyright text-center py-.5">
     <p>
       <a href="../routing/htmlRoutes.js">HTML Routes</a> | <a href="../routing/apiRoutes.js">API Routes</a>
-      | &copy; zzzbray
+      | <a href="https://github.com/zzzbray/friendFinder">GitHub Repo</a> | 2019 &copy; zzzbray
     </p>
   </footer>
 
@@ -215,14 +207,7 @@
     </p>
   </div> -->
 
-  <hr>
-
-
-  <script src="../data/friends.js"></script>
-  <script src="../routing/apiRoutes.js"></script>
-  <script src="../routing/htmlRoutes.js"></script>
-
-
+  <!-- Script -->
   <script>
     $()
   </script>
