--- a/app/public/home.html
+++ b/app/public/home.html
@@ -9,10 +9,17 @@
   <!-- Links to Bootstrap, jQuery,  -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
-  <script src="../data/friends.js"></script>
-  <script src="jquery-3.3.1.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../public/style.css">
-
+  <script src="https://code.jquery.com/jquery.js">
+  </script>
+  <style>
+    .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+  }
+  </style>
 </head>
 
 <body>
@@ -24,7 +31,7 @@
       <h2>Answer a few basic questions.</h2>
       <h2>Then find the friend with the greatest compatibility!</h2>
     </div>
-    <form action="../public/survey.html">
+    <form action="../survey">
       <input type="submit" value="Go to Survey" />
     </form>
   </div>
