--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,10 +7,15 @@
   <title>Survey</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Links to Bootstrap,  -->
+  <!-- <script src="https://code.jquery.com/jquery.js"></script> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery.js">
-  </script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
+
   <style>
     .footer {
       position: absolute;
@@ -205,12 +210,12 @@
   </footer>
 
   <!-- Modal -->
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+  <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">Your Match</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -232,6 +237,7 @@
     //Store scores on a variable
     $(document).ready(function () {
       $("#submit").on("click", function () {
+        $("#resultsModal").modal('toggle');
         //Function returns true or false if user filled out all mand fields
         function mandatoryFields() {
           var isFilled = true;
@@ -248,6 +254,7 @@
             $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val()
           ]);
           console.log(scores);
+
         }
         if (mandatoryFields() === false) {
           console.log("You must complete the survey!")
