--- a/app/public/home.html
+++ b/app/public/home.html
@@ -35,7 +35,7 @@
       <h2>Then find the friend with the greatest compatibility!</h2>
     </div>
     <form action="../survey">
-      <input type="submit" value="Go to Survey" />
+      <input class="btn btn-primary" type="submit" value="Go to Survey" />
     </form>
   </div>
 
