--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -6,16 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Survey</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Links to Bootstrap,  -->
-  <!-- <script src="https://code.jquery.com/jquery.js"></script> -->
+  <!-- Links to Bootstrap CSS, jQuery, and Bootstrap JS  -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-latest.min.js" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
-
   <style>
     .footer {
       position: absolute;
@@ -29,6 +25,7 @@
 
 <body>
   <div class="container">
+    <!-- Header -->
     <div class="jumbotron">
       <h1>Friend Finder Survey</h1>
       <hr>
@@ -192,12 +189,17 @@
         <option value="5">5 Strongly Agree</option>
       </select>
 
-      <!-- Submit Button -->
+      <!-- Submit and Go Home Buttons -->
       <div id="submitDiv">
-
+        <br>
         <h4>Click to find your match!</h4><button type="submit" class="btn btn-primary" id="submit">Submit</button>
+        <br><br>
+        <form action="../">
+          <input class="btn btn-primary" type="submit" value="Go Home" />
+        </form>
         <hr>
       </div>
+
     </div>
   </div>
 
@@ -221,11 +223,11 @@
           </button>
         </div>
         <div class="modal-body">
-          ...
+          <h5 id="matchName"></h5>
+          <img id="matchPhoto" width="300px" alt="Wubba Lubba Dub Dub">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
@@ -237,30 +239,42 @@
     //Store scores on a variable
     $(document).ready(function () {
       $("#submit").on("click", function () {
-        $("#resultsModal").modal('toggle');
+        event.preventDefault();
+
         //Function returns true or false if user filled out all mand fields
         function mandatoryFields() {
-          var isFilled = true;
+          var validated = true;
           $('.mand').each(function () {
             if ($(this).val() === "")
-              isFilled = false;
+              validated = false;
           })
-          return isFilled;
+          return validated;
         }
-        //check for isFilled truth to run app
+        //check for validated truth to run app
         if (mandatoryFields() === true) {
+          $("#resultsModal").modal('toggle');
           var scores = JSON.stringify([$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5")
             .val(),
             $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val()
           ]);
-          console.log(scores);
+          var user = {
+            name: $("#name").val(),
+            photo: $("#photo").val(),
+            scores: scores
+          }
+          console.log(user)
 
-        }
+          //Add user inputs to friends list
+          $.post("/api/friends", user, function (data) {
+            console.log("data: " + data)
+            console.log("user: " + user)
+          })
+        };
         if (mandatoryFields() === false) {
-          console.log("You must complete the survey!")
-        }
-      })
-    })
+          alert("Survey is incomplete!")
+        };
+      });
+    });
   </script>
 </body>
 
