changes. begun match function

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -206,7 +206,7 @@
   <!-- Footer -->
   <footer class="footer-copyright text-center py-.5">
     <p>
-      <a href="../routing/htmlRoutes.js">HTML Routes</a> | <a href="../routing/apiRoutes.js">API Routes</a>
+      <a href="../routing/htmlRoutes.js">HTML Routes</a> | <a href="../api/friends">API Routes</a>
       | <a href="https://github.com/zzzbray/friendFinder">GitHub Repo</a> | 2019 &copy; zzzbray
     </p>
   </footer>
