fixed issue with NaN - differences now readable

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -253,16 +253,24 @@
         //check for validated truth to run app
         if (mandatoryFields() === true) {
           $("#resultsModal").modal('toggle');
-          var scores = JSON.stringify([$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5")
-            .val(),
-            $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val()
-          ]);
           var user = {
-            name: $("#name").val(),
-            photo: $("#photo").val(),
-            scores: scores
+            name: $("#name").val().trim(),
+            photo: $("#photo").val().trim(),
+            scores: [
+              $("#q1").val().trim(),
+              $("#q2").val().trim(),
+              $("#q3").val().trim(),
+              $("#q4").val().trim(),
+              $("#q5").val().trim(),
+              $("#q6").val().trim(),
+              $("#q7").val().trim(),
+              $("#q8").val().trim(),
+              $("#q9").val().trim(),
+              $("#q10").val().trim()
+            ]
+
           }
-          console.log(user)
+          console.log("265s: " + user)
 
           //Add user inputs to friends list
           $.post("/api/friends", user, function (data) {
