--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -276,7 +276,7 @@
             console.log("data: " + data)
             console.log("user: " + user)
             $("#bfName").text(data.bfName);
-            $("bfPhoto").attr("src", data.bfPhoto);
+            $("#bfPhoto").attr("src", data.bfPhoto);
           })
         };
         if (mandatoryFields() === false) {
